<resources>
    <string name="app_name">Calf</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="section_format">Hello World from section: %1$d</string>






    <string name="action_settings">Send</string>
    <string name="action_delete">Delete</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_previous">previous</string>
</resources>
