<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_w"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_send"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/tab_search_normal"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_play"
        android:icon="@android:drawable/ic_media_play"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_pause"
        android:icon="@android:drawable/ic_media_pause"
        android:orderInCategory="100"
        android:title="@string/action_pause"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_previous"
        android:icon="@android:drawable/ic_media_previous"
        android:orderInCategory="10"
        android:title="@string/action_previous"
        app:showAsAction="ifRoom" />

</menu>
